Batch LTP Changes