@@ -1,5 +1,6 @@
 package com.trading.manualorderservice.optionfilter;
 
+import com.trading.manualorderservice.market.LtpServiceHolder;
 import com.trading.manualorderservice.marketfeed.IndexPollingService;
 import com.trading.manualorderservice.service.DhanAllApis;
 import com.trading.manualorderservice.stockfilter.DhanStockHelper;
@@ -23,13 +24,13 @@ public class OptionOrderHelper {
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(OptionOrderHelper.class);
 
-	/** Inject via constructor */
+	/** Helpers */
 	private final DhanStockHelper dhanStockHelper;
 
-	/** Option chain grouped by underlying */
+	/** Loaded option master grouped by underlying */
 	private final Map<String, List<OptionRow>> optionsByUnderlying = new HashMap<>();
 
-	/** Spot Security IDs */
+	/** Underlying → Security ID (for equities and index spot) */
 	private final Map<String, String> spotSecurityIds = new HashMap<>();
 
 	private static final DateTimeFormatter MONTH_FMT =
@@ -38,19 +39,18 @@ public class OptionOrderHelper {
 					.appendPattern("MMM-uuuu")
 					.toFormatter(Locale.ENGLISH);
 
-	/**
-	 * 🔥 THIS RUNS AFTER SPRING CREATES THE BEAN
-	 * and LOADS CSV CORRECTLY
-	 */
+	// ============================================================
+	//                 LOAD OPTION MASTER CSV
+	// ============================================================
+
 	@PostConstruct
 	public void init() throws Exception {
 		LOGGER.info("Loading Option Master CSV...");
 
-		List<Map<String, String>> csvRows = DhanOptionHelper.loadMasterCsv();
-
+		List<Map<String, String>> rows = DhanOptionHelper.loadMasterCsv();
 		int skipped = 0;
 
-		for (Map<String, String> row : csvRows) {
+		for (Map<String, String> row : rows) {
 			try {
 				String instrType = row.getOrDefault("SEM_EXCH_INSTRUMENT_TYPE", "").trim().toUpperCase();
 				String tradingSymbol = row.getOrDefault("SEM_TRADING_SYMBOL", "").trim();
@@ -60,58 +60,44 @@ public class OptionOrderHelper {
 					continue;
 				}
 
+				// Options
 				if (instrType.startsWith("OP")) {
-					String underlyingKey = extractUnderlying(tradingSymbol);
-					OptionRow or = new OptionRow(row, underlyingKey);
-
-					optionsByUnderlying.computeIfAbsent(underlyingKey, k -> new ArrayList<>()).add(or);
-
-				} else if ("ES".equals(instrType) || "INDEX".equals(instrType)) {
+					String underlying = extractUnderlying(tradingSymbol);
+					OptionRow or = new OptionRow(row, underlying);
+					optionsByUnderlying.computeIfAbsent(underlying, k -> new ArrayList<>()).add(or);
+				}
+				// Equity Spot / Index Spot
+				else if (instrType.equals("ES") || instrType.equals("INDEX")) {
 					String underlyingKey = tradingSymbol.toUpperCase();
 					String secId = row.getOrDefault("SEM_SMST_SECURITY_ID", "").trim();
-
 					if (!secId.isEmpty()) {
 						spotSecurityIds.putIfAbsent(underlyingKey, secId);
 					}
-
 				} else {
 					skipped++;
 				}
 
-			} catch (Exception ignored) {
+			} catch (Exception ex) {
 				skipped++;
 			}
 		}
 
-		// Sort by expiry inside each underlying
+		// Sort options inside each underlying by expiry date
 		optionsByUnderlying.values().forEach(list ->
-				list.sort(Comparator.comparing(o -> o.expiry, Comparator.nullsLast(LocalDate::compareTo)))
-		);
+				list.sort(Comparator.comparing(o -> o.expiry, Comparator.nullsLast(LocalDate::compareTo))));
 
 		LOGGER.info("Option Master Loaded: {} underlyings, {} skipped rows",
 				optionsByUnderlying.size(), skipped);
 	}
 
-	private String extractUnderlying(String tradingSymbol) {
-		int dash = tradingSymbol.indexOf('-');
-		return (dash > 0 ? tradingSymbol.substring(0, dash) : tradingSymbol).toUpperCase();
+	private String extractUnderlying(String symbol) {
+		int dash = symbol.indexOf('-');
+		return (dash > 0 ? symbol.substring(0, dash) : symbol).toUpperCase();
 	}
 
-	// ========================== Public APIs ==========================
-
-	public boolean isValidUnderlying(String u) {
-		return optionsByUnderlying.containsKey(u.toUpperCase());
-	}
-
-	public Optional<String> getUnderlyingSpotSecurityId(String u) {
-		return Optional.ofNullable(spotSecurityIds.get(u.toUpperCase()));
-	}
-
-	public Optional<String> getEquitySecurityId(String u) {
-		return getUnderlyingSpotSecurityId(u);
-	}
-
-	// ================= Option Order Builder ===========================
+	// ============================================================
+	//                  OPTION ORDER BUILDER
+	// ============================================================
 
 	public Map<String, Object> buildOrder(
 			String underlying,
@@ -122,74 +108,145 @@ public class OptionOrderHelper {
 			String placeOrderType,
 			int numberOfLots,
 			double spotPrice,
-			String expiryMonthYear) {
+			String expiryMonthYear
+	) {
 
 		String u = underlying.toUpperCase();
-		String type = optionType.toUpperCase();
-		String money = moneyness.toUpperCase();
-
 		List<OptionRow> all = optionsByUnderlying.getOrDefault(u, Collections.emptyList());
 
 		if (all.isEmpty()) {
-			throw new RuntimeException("No options found for underlying: " + underlying);
+			throw new RuntimeException("No options found for underlying: " + u);
 		}
 
-		// Filter CE/PE
+		String type = optionType.toUpperCase();
+		String money = moneyness.toUpperCase();
+
+		// Filter CE / PE
 		List<OptionRow> filtered = all.stream()
 				.filter(r -> r.optionType.equalsIgnoreCase(type))
-				.toList();
+				.collect(Collectors.toList());
 
 		if (filtered.isEmpty()) {
 			throw new RuntimeException("No " + type + " options for " + u);
 		}
 
+		// Filter only rows of target expiry month
 		YearMonth targetMonth = YearMonth.parse(expiryMonthYear.trim(), MONTH_FMT);
 
-		List<OptionRow> monthRows = filtered.stream()
+		List<OptionRow> monthly = filtered.stream()
 				.filter(r -> r.expiry != null && YearMonth.from(r.expiry).equals(targetMonth))
 				.filter(r -> r.expiryFlag == null || r.expiryFlag.isBlank() || r.expiryFlag.equalsIgnoreCase("M"))
 				.toList();
 
-		if (monthRows.isEmpty()) {
-			throw new RuntimeException("No monthly options for " + u);
+		if (monthly.isEmpty()) {
+			throw new RuntimeException("No monthly expiry rows for " + u);
 		}
 
-		LocalDate lastExpiry = monthRows.stream()
+		// Find latest expiry of that month
+		LocalDate lastExpiry = monthly.stream()
 				.map(r -> r.expiry)
 				.max(LocalDate::compareTo)
 				.orElseThrow();
 
-		List<OptionRow> expiryRows = monthRows.stream()
+		List<OptionRow> expiryRows = monthly.stream()
 				.filter(r -> r.expiry.equals(lastExpiry))
 				.toList();
 
+		// Strike selection
 		double step = getStrikeStep(expiryRows);
-		double baseStrike = Math.round(spotPrice / step) * step;
-		double targetStrike = adjustStrike(baseStrike, step, type, money);
+		double base = Math.round(spotPrice / step) * step;
+		double targetStrike = adjustStrike(base, step, type, money);
 
 		OptionRow chosen = expiryRows.stream()
 				.min(Comparator.comparingDouble(r -> Math.abs(r.strike - targetStrike)))
 				.orElseThrow();
 
-		Map<String, Object> order = new LinkedHashMap<>();
-		order.put("security_id", chosen.securityId);
-		order.put("exchange_segment", "NSE_FNO");
-		order.put("transaction_type", transactionType);
-		order.put("quantity", chosen.lotSize * numberOfLots);
-		order.put("order_type", "MARKET");
-		order.put("product_type", tradeType);
-		order.put("price", 0.0);
-		order.put("trigger_price", 0.0);
-		order.put("stock_name", underlying);
-		order.put("trading_symbol", chosen.tradingSymbol);
-		order.put("custom_Symbol", chosen.customSymbol);
-		order.put("place_order_type", placeOrderType);
-		order.put("job_status", "NEW");
+		Map<String, Object> out = new LinkedHashMap<>();
+		out.put("security_id", chosen.securityId);
+		out.put("exchange_segment", "NSE_FNO");
+		out.put("transaction_type", transactionType);
+		out.put("quantity", chosen.lotSize * numberOfLots);
+		out.put("order_type", "MARKET");
+		out.put("product_type", tradeType);
+		out.put("price", 0.0);
+		out.put("trigger_price", 0.0);
+		out.put("trading_symbol", chosen.tradingSymbol);
+		out.put("stock_name", u);
+		out.put("custom_Symbol", chosen.customSymbol);
+		out.put("place_order_type", placeOrderType);
+		out.put("job_status", "NEW");
 
-		return order;
+		return out;
 	}
 
-	// ===================== Utilities ==========================
+	// ============================================================
+	//                     SPOT PRICE RESOLUTION
+	// ============================================================
+
+	/**
+	 * Centralized & Correct Spot Price Resolver
+	 * Works for:
+	 *   ✔ NIFTY
+	 *   ✔ BANKNIFTY
+	 *   ✔ Equity Underlyings (SBIN, TCS, etc.)
+	 */
+	public double resolveSpotPrice(
+			String underlying,
+			IndexPollingService indexSvc,
+			DhanAllApis dhanApis,
+			BrokerUserDetails creds,
+			Long userId
+	) throws Exception {
+
+		String u = underlying.toUpperCase().replace("_", "").trim();
+
+		// --------------------------------------------
+		// 1️⃣ INDEX UNDERLYINGS
+		// --------------------------------------------
+
+		if (u.equals("NIFTY") || u.equals("NIFTY50")) {
+
+			Double val = indexSvc.getNiftySpot();
+			if (val == null) {
+				Thread.sleep(200);
+				val = indexSvc.getNiftySpot();
+			}
+			if (val != null) return val;
+
+			return dhanApis.fetchLtpIndex("NIFTY", creds, userId);
+		}
+
+		if (u.equals("BANKNIFTY") || u.equals("NIFTYBANK")) {
+
+			Double val = indexSvc.getBankNiftySpot();
+			if (val == null) {
+				Thread.sleep(200);
+				val = indexSvc.getBankNiftySpot();
+			}
+			if (val != null) return val;
+
+			return dhanApis.fetchLtpIndex("BANKNIFTY", creds, userId);
+		}
+
+		// --------------------------------------------
+		// 2️⃣ EQUITY UNDERLYINGS (SBIN, TCS, RELIANCE)
+		// --------------------------------------------
+
+		Optional<String> eq = dhanStockHelper.getSecurityId(u);
+		if (eq.isEmpty()) {
+			throw new RuntimeException("Unknown equity underlying: " + u);
+		}
+
+		String secId = eq.get();
+
+		// Use central LTP service (cache → batch → fallback)
+		return LtpServiceHolder.get()
+				.getLtpForTrading(secId, "NSE_EQ", creds, userId);
+	}
+
+	// ============================================================
+	//                    Utility Functions
+	// ============================================================
 
 	private double getStrikeStep(List<OptionRow> rows) {
 		List<Double> strikes = rows.stream().map(r -> r.strike).distinct().sorted().toList();
@@ -205,26 +262,11 @@ public class OptionOrderHelper {
 		};
 	}
 
-	public double resolveSpotPrice(String underlying,
-								   IndexPollingService indexSvc,
-								   DhanAllApis dhanApis,
-								   BrokerUserDetails creds,
-								   Long userId) throws Exception {
+	public boolean isValidUnderlying(String u) {
+		return optionsByUnderlying.containsKey(u.toUpperCase());
+	}
 
-		String u = underlying.toUpperCase();
-
-		return switch (u) {
-			case "NIFTY", "NIFTY50" -> Optional.ofNullable(indexSvc.getNiftySpot())
-					.orElseThrow(() -> new RuntimeException("NIFTY Spot not available"));
-
-			case "BANKNIFTY", "NIFTY_BANK" -> Optional.ofNullable(indexSvc.getBankNiftySpot())
-					.orElseThrow(() -> new RuntimeException("BANKNIFTY Spot not available"));
-
-			default -> {
-				String secId = dhanStockHelper.getSecurityId(u)
-						.orElseThrow(() -> new RuntimeException("Stock underlying missing: " + u));
-				yield dhanApis.fetchLtpEquity(secId, creds, userId);
-			}
-		};
+	public Optional<String> getUnderlyingSpotSecurityId(String u) {
+		return Optional.ofNullable(spotSecurityIds.get(u.toUpperCase()));
 	}
 }
